2010-03-13  Aaron Griffith  <aargri@gmail.com>

	* src/vaht_wav.c: added attribute getters

2010-03-12  Aaron Griffith  <aargri@gmail.com>

	* src/vahttool/convert-tWAV.c: added a dummy converter to test decoder

	* src/vaht_wav.c: added a start to the tWAV decoder

2010-03-10  Aaron Griffith  <aargri@gmail.com>

	* src/vaht_bmp.c (vaht_bmp_data): started using lazy decompression

	* include/doxygen.cfg: added doxygen to build system

2010-03-09  Aaron Griffith  <aargri@gmail.com>

	* src/vaht_resource.c (vaht_resources_close): fixed memfree bug

	* src/vaht_archive.c (vaht_archive_grab): added similar grab to archive

	* src/vaht_mov.c: implemented resource memmanagement

	* src/vaht_bmp.c: implemented resource memmanagement

	* src/vaht_resource.c (vaht_resource_grab): added some simple memory
	management.

	* src/vaht_mov.c (vaht_mov_open): fixed a bug that started reading
	from the end.

	* src/vaht_bmp.c (vaht_bmp_open): preparing for lazy image reading
	(vaht_bmp_close): added check to see if data is NULL

	* src/vaht_mov.c (vaht_mov_tell): added tell function
	(vaht_mov_read): removed need for internal seek position

	* src/vaht_resource.c: added a tell function

2010-03-08 Aaron Griffith <aargri@gmail.com>

	* vahttool: merged in vahttool sources

2010-03-07 Aaron Griffith <aargri@gmail.com>

	* vaht_mov.c: added tMOV translator

2009-02-23 Aaron Griffith <aargri@gmail.com>

	* vaht_bmp.c: removed useless, confusing LOOKBACKP wrap
	* vaht_bmp.c: fixed uncompressed, indexed decompression

2009-02-21 Aaron Griffith <aargri@gmail.com>
	
	* changed to autotools build system
	
	* vaht_bmp.c: added format introspection
	* vaht_bmp.c: added truecolor support
	
	* vaht_resource.c: can now read into NULL pointer, acts as seek.